# SSPipeline

./: CMakeLists.txt  Qt4GenerateMocs.cmake  README.md  main.cpp
